@@ -320,6 +320,14 @@
       time) now requires an external \file{libz.a} to be available (it is
       part of the \sQuote{goodies} used to compile Windows binary
       packages).  It would be simpler to use \code{-lz} instead.
+      
+      \item The default for option \code{pkgType} on platforms using
+      binary packages is now \code{"both"}, so source packages will be
+      tried if binary versions are not available or not up to date.
+      
+      There are options for what \code{install.packages(type = "both")}
+      will do if compilation of a source package is desirable: see
+      \code{?options} (under \pkg{utils}).
     }
   }
 
